# quantum-garden

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  PERF-PLAN.md  PROJECT-DESCRIPTION.md  README.md  SESSION.md  TASKS.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.husky/: pre-commit
apps/quantum/: .env.example  README.md  pyproject.toml
apps/quantum/data/: jobs.json
apps/quantum/scripts/: generate-quantum-pool.py
apps/quantum/src/: __init__.py  config.py  main.py
apps/quantum/src/circuits/: __init__.py  base.py  plant_genome.py  registry.py  runner.py
apps/quantum/src/circuits/levels/: __init__.py  bell_pair.py  ghz_state.py  interference.py  quantum_fern.py  superposition.py  variational.py  watercolor_flower_v2.py  wc_aurora_wisp.py  wc_bell_cluster.py  wc_cosmic_lotus.py  wc_midnight_poppy.py  wc_phoenix_flame.py  wc_quantum_rose.py  wc_quantum_tulip.py  wc_sumi_spirit.py  wc_weeping_willow.py  wc_zen_lotus.py
apps/quantum/src/data/: .gitkeep  quantum-pool.json
apps/quantum/src/ionq/: __init__.py  client.py
apps/quantum/src/jobs/: __init__.py  store.py  worker.py
apps/quantum/src/mapping/: __init__.py  traits.py
apps/quantum/src/routers/: circuits.py  health.py  jobs.py
apps/quantum/src/variants/: __init__.py  loader.py
apps/quantum/tests/: test_circuits.py  test_mapping.py
apps/web/: package.json  (+5 more)
docs/: architecture.md  contributing.md  debugging.md  implementation-plan.md  observation-system.md  quantum-circuits.md  roadmap.md  sandbox.md  sound-effects-plan.md  testing.md  (+1 more)
(+275 files in other folders)
